tests/purs/failing/RecordLiteralLabelMismatch.out
Error found:
in module [33mA[0m
at tests/purs/failing/RecordLiteralLabelMismatch.purs:8:14 - 8:40 (line 8, column 14 - line 8, column 40)

  Expected type
  [33m            [0m
  [33m  { c :: Int[0m
  [33m  , d :: Int[0m
  [33m  ...       [0m
  [33m  }         [0m
  [33m            [0m
  but found type
  [33m            [0m
  [33m  { y :: Int[0m
  [33m  , z :: Int[0m
  [33m  ...       [0m
  [33m  }         [0m
  [33m            [0m

while checking that expression [33m{ a: 1[0m
                               [33m, b: 2[0m
                               [33m, y: 9[0m
                               [33m, z: 9[0m
                               [33m}     [0m
  has type [33m{ a :: Int[0m
           [33m, b :: Int[0m
           [33m, c :: Int[0m
           [33m, d :: Int[0m
           [33m}         [0m
while applying a function [33mf[0m
  of type [33m{ a :: Int[0m
          [33m, b :: Int[0m
          [33m, c :: Int[0m
          [33m, d :: Int[0m
          [33m}         [0m
          [33m-> Int    [0m
  to argument [33m{ a: 1[0m
              [33m, b: 2[0m
              [33m, y: 9[0m
              [33m, z: 9[0m
              [33m}     [0m
in value declaration [33mproblems[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

